# playing

./: .gitignore  README.md
algorithm/: CMakeLists.txt
algorithm/common/: CMakeLists.txt
algorithm/common/fib/: fib.cpp
algorithm/ds/: hash_table.md  rb_tree.md
algorithm/ds/queue/: my_priority_queue.cpp
algorithm/ds/union_find/: README.md
algorithm/sort/: CMakeLists.txt  main.cpp  sort_imp.h  sort_test_helper.h
algorithm/z_include/: clock_time.h
leetcode/: CMakeLists.txt  README.md  leetcode.h
leetcode/_bynum/001/: two_sum.cpp
leetcode/_bynum/007/: reverse_integer.cpp
leetcode/_bynum/009/: palindrone_number.cpp
leetcode/_bynum/014/: longest_common_prefix.cpp
leetcode/_bynum/035/: search_insert_position.cpp
leetcode/_bynum/067/: add_binary.cpp
leetcode/_bynum/069/: sqrt.cpp
leetcode/_bynum/112/: path_sum.cpp
leetcode/_bynum/22/: Generate_Parentheses.cpp
leetcode/_bynum/278/: first_bad_version.cpp
leetcode/array/: CMakeLists.txt
leetcode/array/0026_Remove_Duplicates_from_Sorted_Array/: main.cpp
leetcode/array/0027_Remove_Element/: main.cpp
leetcode/array/0075_Sort_Colors/: main.cpp
leetcode/array/0080_Remove_Duplicates_from_Sorted_Array_II/: main.cpp
leetcode/array/0088_Merge_Sorted_Array/: main.cpp
leetcode/array/0167_Two_Sum_II/: main.cpp
leetcode/array/0169_Majority_Element/: main.cpp
leetcode/array/0209_Minimum_Size_Subarray_Sum/: main.cpp
leetcode/array/0215_Kth_Largest_Element_in_an_Array/: main.cpp
leetcode/array/0283_Move_Zeroes/: main.cpp  main.py
leetcode/backtracking/: CMakeLists.txt  README.md
leetcode/backtracking/0017_Letter_Combinations_of_a_Phone_Number/: main.cpp
leetcode/backtracking/0022_Generate_Parentheses/: main.cpp
leetcode/backtracking/0039_Combination_Sum/: main.cpp
leetcode/backtracking/0046_Permutations/: main.cpp
leetcode/backtracking/0077_Combinations/: main.cpp
leetcode/backtracking/0078_Subsets/: main.cpp
leetcode/backtracking/0090_Subsets_II/: main.cpp
leetcode/backtracking/0093_Restore_IP_Addresses/: main.cpp
leetcode/backtracking/0784_Letter_Case_Permutation/: main.cpp
leetcode/binary_tree/: CMakeLists.txt  README.md  binary_tree.cpp  binary_tree.h
leetcode/binary_tree/0094_Binary_Tree_Inorder_Traversal/: main.cpp
leetcode/binary_tree/0098_Validate_Binary_Search_Tree/: main.cpp
leetcode/binary_tree/0102_Binary_Tree_Level_Order_Traversal/: main.cpp
leetcode/binary_tree/0144_Binary_Tree_Preorder_Traversal/: main.cpp
leetcode/binary_tree/0145_Binary_Tree_Postorder_Traversal/: main.cpp
leetcode/binary_tree/0226_Invert_Binary_Tree/: main.cpp
leetcode/binary_tree/0606_Construct_String_from_Binary_Tree/: main.cpp
leetcode/bs/: CMakeLists.txt
leetcode/bs/34/: main.cpp
leetcode/design/: CMakeLists.txt  README.md
leetcode/design/0155_Min_Stack/: main.cpp
leetcode/design/0208_Implement_Trie/: main.cpp
leetcode/design/0622_Design_Circular_Queue/: main.cpp
leetcode/design/0705_Design_HashSet/: main.cpp
leetcode/design/0707_Design_Linked_List/: main.cpp
leetcode/dynamic_programming/: CMakeLists.txt
leetcode/dynamic_programming/0053_Maximum_Subarray/: main.cpp
leetcode/dynamic_programming/0062_Unique_Paths/: main.cpp
leetcode/dynamic_programming/0063_Unique_Paths_II/: main.cpp
leetcode/dynamic_programming/0064_Minimum_Path_Sum/: main.cpp
leetcode/dynamic_programming/0070_Climbing_Stairs/: main.cpp
leetcode/dynamic_programming/0091_Decode_Ways/: main.cpp
leetcode/dynamic_programming/0120_Triangle/: main.cpp
leetcode/dynamic_programming/0121_Best_Time_to_Buy_and_Sell_Stock/: main.cpp
leetcode/dynamic_programming/0122_Best_Time_to_Buy_and_Sell_Stock_II/: main.cpp
leetcode/dynamic_programming/0221_Maximal_Square/: main.cpp
leetcode/dynamic_programming/0279_Perfect_Squares/: main.cpp
leetcode/dynamic_programming/0343_Integer_Break/: main.cpp
leetcode/dynamic_programming/0552_Student_Attendance_Record_II/: main.cpp
leetcode/greedy/: 0392_Is_Subsequence.cpp  0455_Assign_Cookies.cpp  CMakeLists.txt
leetcode/greedy/0045_Jump_Game_II/: main.cpp
leetcode/greedy/0055_Jump_Game/: main.cpp
leetcode/link_list/: CMakeLists.txt  listnode.h  merge_two_sorted_list.cpp
leetcode/link_list/0002_Add_Two_Numbers/: main.cpp
leetcode/link_list/0023_Merge_k_Sorted_Lists/: main.cpp
leetcode/link_list/0024_Swap_Nodes_in_Pairs/: main.cpp
leetcode/link_list/0082_Remove_Duplicates_from_Sorted_List_II/: main.cpp
leetcode/link_list/0083_Remove_Duplicates_from_Sorted_List/: main.cpp
leetcode/link_list/0092_Reverse_Linked_List_II/: main.cpp  main.py
leetcode/link_list/0141_Linked_List_Cycle/: main.cpp
leetcode/link_list/0160_Intersection_of_Two_Linked_Lists/: main.cpp
leetcode/link_list/0206_Reverse_Linked_List/: main.cpp
leetcode/link_list/0876_Middle_of_the_Linked_List/: main.cpp
leetcode/math/: CMakeLists.txt
leetcode/math/0029_Divide_Two_Integers/: main.cpp
leetcode/math/0043_Multiply_Strings/: main.cpp
leetcode/matrix/: CMakeLists.txt  transpose_matrix.cpp
leetcode/matrix/0073_Set_Matrix_Zeroes/: main.cpp
leetcode/matrix/0289_Game_of_Life/: main.cpp
leetcode/number/: CMakeLists.txt
leetcode/number/0231_Power_of_Two/: main.cpp
leetcode/number/0263_Ugly_Number/: main.cpp
leetcode/number/0264_Ugly_Number_II/: main.cpp
leetcode/number/0788_Rotated_Digits/: main.cpp
leetcode/parse/0385_Mini_Parser/: main.cpp
leetcode/set_map/: CMakeLists.txt
leetcode/set_map/0202_Happy_Number/: main.cpp
leetcode/set_map/0205_Isomorphic_Strings/: main.cpp
leetcode/set_map/0217_Contains_Duplicate/: main.cpp
leetcode/set_map/0219_Contains_Duplicate_II/: main.cpp
leetcode/set_map/0242_Valid_Anagram/: main.cpp
leetcode/set_map/0349_Intersection_of_Two_Arrays/: main.cpp
leetcode/set_map/0451_Sort_Characters_By_Frequency/: main.cpp
leetcode/stack_queue/: CMakeLists.txt
leetcode/stack_queue/0020_Valid_Parentheses/: main.c  main.cpp  main.go  main.py
leetcode/string/: CMakeLists.txt  atoi.cpp  roman_to_integer.cpp  strstr.cpp
leetcode/sum/: CMakeLists.txt
leetcode/usefull/: CMakeLists.txt
(+34 files in other folders)
