
#0026 array
add_executable(0026_ 0026_Remove_Duplicates_from_Sorted_Array/main.cpp)

#0027 array
add_executable(0027_ 0027_Remove_Element/main.cpp)

#0075 array, sort
add_executable(0075_ 0075_Sort_Colors/main.cpp)

#0080 arry
add_executable(0080_ 0080_Remove_Duplicates_from_Sorted_Array_II/main.cpp)

#0088 array, sort
add_executable(0088_ 0088_Merge_Sorted_Array/main.cpp)

#0167 array, double pointer
add_executable(0167_ 0167_Two_Sum_II/main.cpp)

#0169
add_executable(169 0169_Majority_Element/main.cpp)

#0215 array, quit sort
add_executable(0215_ 0215_Kth_Largest_Element_in_an_Array/main.cpp)

#0209 array, 滑动窗口
add_executable(0209_ 0209_Minimum_Size_Subarray_Sum/main.cpp)

#0283 array
add_executable(0283_ 0283_Move_Zeroes/main.cpp)

