
#17
add_executable(17 0017_Letter_Combinations_of_a_Phone_Number/main.cpp)

#22
add_executable(22 0022_Generate_Parentheses/main.cpp)

#39
add_executable(39 0039_Combination_Sum/main.cpp)

#46
add_executable(46 0046_Permutations/main.cpp)

#77
add_executable(77 0077_Combinations/main.cpp)

#78
add_executable(78 0078_Subsets/main.cpp)

#90
add_executable(90 0090_Subsets_II/main.cpp)

#93
add_executable(93 0093_Restore_IP_Addresses/main.cpp)

#784
add_executable(784 0784_Letter_Case_Permutation/main.cpp)
