
#0053 dynamic programming
add_executable(0053_ 0053_Maximum_Subarray/main.cpp)

#62
add_executable(62 0062_Unique_Paths/main.cpp)

#63
add_executable(63 0063_Unique_Paths_II/main.cpp)

#70
add_executable(70 0070_Climbing_Stairs/main.cpp)

#120
add_executable(120 0120_Triangle/main.cpp)

#121
add_executable(121 0121_Best_Time_to_Buy_and_Sell_Stock/main.cpp)

#122
add_executable(122 0122_Best_Time_to_Buy_and_Sell_Stock_II/main.cpp)

#279
add_executable(279 0279_Perfect_Squares/main.cpp)

#343
add_executable(343 0343_Integer_Break/main.cpp)

#552
add_executable(552 0552_Student_Attendance_Record_II/main.cpp)



