
#021
add_executable(0002 0002_Add_Two_Numbers/main.cpp)

#021
add_executable(0021 merge_two_sorted_list.cpp)

#23
add_executable(23 0023_Merge_k_Sorted_Lists/main.cpp)

#24
add_executable(24 0024_Swap_Nodes_in_Pairs/main.cpp)

#82
add_executable(82 0082_Remove_Duplicates_from_Sorted_List_II/main.cpp)

#83
add_executable(83 0083_Remove_Duplicates_from_Sorted_List/main.cpp)

#92
add_executable(92 0092_Reverse_Linked_List_II/main.cpp)

#141
add_executable(141 0141_Linked_List_Cycle/main.cpp)

#206
add_executable(206 0206_Reverse_Linked_List/main.cpp)

#876
add_executable(876 0876_Middle_of_the_Linked_List/main.cpp)


