cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)

include_directories(".")
include_directories("..")

#1
add_executable(1 0001_Two_Sum/main.cpp)

#15
add_executable(15 0015_3Sum/main.cpp)

#18
add_executable(18 0018_4Sum/main.cpp)

#167
add_executable(167 0167_Two_Sum_II/main.cpp)

#454
add_executable(454 0454_4Sum_II/main.cpp)

#653
add_executable(653 0653_Two_Sum_IV/main.cpp)